convert checkbox to toggle by css

--- a/popup.css
+++ b/popup.css
@@ -14,6 +14,7 @@ input[type="checkbox"] {
   width: 20px;
   height: 20px;
   vertical-align: bottom;
+  visibility: hidden;
 }
 
 label {
@@ -26,7 +27,41 @@ label {
 .switch {
   position: relative;
   display: inline-block;
-  width: 18px;
-  height: 18px;
+  width: 30px;
+  height: 10px;
   vertical-align: bottom;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 90px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 11px;
+  width: 11px;
+  left: 5px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+input:checked + .slider {
+  background-color: #f32121;
+}
+input:checked + .slider:before {
+  -webkit-transform: translateX(19px);
+  -ms-transform: translateX(19x);
+  transform: translateX(19px);
 }
