--- a/css/global.css
+++ b/css/global.css
@@ -36,12 +36,15 @@
  /* Dropdown Button */
  .dropbtn {
   padding: 5px;
+  cursor: pointer;
+  position: relative;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
+  min-width: 100%;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -49,12 +52,12 @@
   display: none;
   position: absolute;
   background-color: #ffffff;
-  z-index: 1;
+  z-index: 10000;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  padding: 5px;
+  padding: 5px 10px;
   font-size: 12px;
   text-decoration: none;
   display: block;
@@ -66,4 +69,7 @@
 }
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
+.dropbtn:hover + .dropdown-content, .dropdown-content:hover{
+  display: block;
+}
+
